--- a/index.css
+++ b/index.css
@@ -91,6 +91,7 @@ button:hover {
   background-color: rgba(255, 255, 255, 0.75);
   color: black;
   padding: 1em;
+  text-transform: capitalize;
 }
 
 /* -- UTILITY -- */
