--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 30px auto;
+  margin: 30px auto 0;
   gap: 10px;
   max-width: 320px;
   position: relative;
@@ -80,6 +80,12 @@ button:hover {
   width: 300px;
   height: 2px;
   background-color: #dce1eb;
+}
+
+.recycle-bin {
+  padding-bottom: 1em;
+  display: flex;
+  justify-content: center;
 }
 
 /* -- UTILITY -- */
